--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
 body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -7,7 +11,35 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container {
+  margin-top: 10rem;
+  padding: 20px;
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid rgb(199, 196, 196);
+  border-radius: 10px;
+  box-shadow: 15px 20px 20px rgba(0, 0, 0, 0.2);
+}
+
+h1 {
+  text-align: center;
+  margin-top: 0;
+}
+
+textarea {
+  width: 100%;
+  height: 200px;
+  font-size: 18px;
+  padding: 10px;
+  border: 2px solid black;
+  border-radius: 5px;
+  resize: none;
+}
+
+p {
+  font-size: 16px;
+  margin-top: 10px;
 }
